# margen

./: .gitguardian.yaml  .gitignore  DEPLOY.md  Makefile  README.md  render.yaml
apps/api/: .env.example  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml
apps/api/.github/workflows/: build.yml
apps/api/docs/: transactions-contract.md
apps/api/migrations/: env.py
apps/api/migrations/versions/: 2de10033cc1c_create_transactions.py  6d0d805e893c_create_monotributo_config_and_snapshot.py  a1b2c3d4e5f6_add_nullable_user_id_ownership.py  a2b3c4d5e6f7_add_budget_kind_swap_unique.py  a8b9c0d1e2f3_add_monotributo_enabled_to_app_settings.py  b2c3d4e5f6a7_scope_monotributo_snapshot_to_user.py  b3c4d5e6f7a8_add_fx_snapshot_source_and_preferred_rate_source.py  c0d1e2f3a4b5_institution_account_hierarchy.py  c3d4e5f6a7b8_unique_user_id_on_app_settings.py  c4d5e6f7a8b9_add_transactions_offsets_transaction_id.py  c89a49fe1c9f_create_invoice_document.py  cde5505de5cd_create_app_settings_migrate_monotributo_config.py  d1e2f3a4b5c6_create_transfers.py  d4e5f6a7b8c9_tighten_user_id_to_not_null.py  d5e6f7a8b9c0_add_transactions_forecast_schedule_fields.py  e2f3a4b5c6d7_create_budgets.py  e5f6a7b8c9d0_split_bank_and_card.py  e6f7a8b9c0d1_create_debts.py  f1a2b3c4d5e6_create_budget_income.py  f6dd6f51e112_create_statement_document.py  f7a8b9c0d1e2_create_accounts_seed_from_bank_tags.py  f8a9b0c1d2e3_add_card_brand_last4_to_institutions.py
apps/api/scripts/: backfill_user_owner.sh  migrate_to_supabase.sh  sync_from_supabase.sh
apps/api/src/margen_api/: asgi.py  bootstrap.py  main.py  router.py  version.py
apps/api/src/margen_api/adapters/: account_queries.py  account_repository.py  budget_income_queries.py  budget_income_repository.py  budget_queries.py  budget_repository.py  committed_queries.py  debt_queries.py  debt_repository.py  document_store.py  forecast_queries.py  institution_queries.py  institution_repository.py  monotributo_config_repository.py  monotributo_repository.py  queries.py  reports_queries.py  repository.py  settings_repository.py  statement_store.py  transfer_queries.py  transfer_repository.py  unit_of_work.py
apps/api/src/margen_api/entrypoint/: accounts.py  accounts_schemas.py  budget_income.py  budget_income_schemas.py  budgets.py  budgets_schemas.py  debts.py  debts_schemas.py  dependencies.py  insights.py  insights_schemas.py  institutions.py  institutions_schemas.py  invoices.py  invoices_schemas.py  monitor.py  monotributo.py  monotributo_schemas.py  reports.py  reports_schemas.py  settings.py  settings_schemas.py  statements.py  statements_schemas.py  summaries.py  summaries_schemas.py  transactions.py  transactions_schemas.py  transfers.py  transfers_schemas.py
apps/api/src/margen_api/service_layer/: account_handlers.py  account_read_models.py  account_reader.py  account_repository.py  budget_handlers.py  (+62 more)
apps/api/tests/: conftest.py
apps/api/tests/fakes/: __init__.py  persistence.py
apps/api/tests/integration/: conftest.py  test_budgets.py  test_committed.py  test_forecast.py  test_fx_snapshot.py  test_insights.py  test_invoice_document.py  test_invoice_parser_real.py  test_migrations.py  test_monotributo.py  test_net_worth.py  test_reports.py  test_settings.py  test_statement_document.py  test_statement_parser_real.py  test_summaries.py  test_transactions.py  test_transfers.py  test_unit_of_work.py
apps/api/tests/unit/: test_asgi.py  test_bootstrap.py
(+675 files in other folders)
