[project]
name = "margen-api"
version = "0.1.0"
description = "Margen backend API"
authors = [{ name = "Tomas Sanchez", email = "info@tomsanchez.com" }]
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic-settings>=2.14.2",
    "pydantic[email]>=2.11.0",
    "sqlalchemy[asyncio]>=2.0.41",
    "alembic>=1.16.2",
    "asyncpg>=0.30.0",
    # ARCA invoice parser (ADR-069): PyMuPDF (import name `fitz` / `pymupdf`)
    # extracts text and renders pages to images; pyzbar decodes the AFIP QR.
    # NOTE: pyzbar wraps the native `zbar` system library, which must be present
    # at runtime (e.g. `apt-get install libzbar0` in the container image) — a
    # deploy/container follow-up tracked alongside ADR-069.
    "pymupdf>=1.27.2.3",
    "pyzbar>=0.1.9",
    # Required by FastAPI to parse multipart uploads for the stateless invoice
    # parse endpoint (POST /invoices/parse, ADR-070). FastAPI eagerly verifies
    # this is installed when an UploadFile parameter is declared.
    "python-multipart>=0.0.18",
    "pyjwt[crypto]>=2.13.0",
    "asyncer>=0.0.17",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=0.24.0",
    "coverage[toml]>=7.9.0",
    "pre-commit>=4.2.0",
    "httpx>=0.28.0",
    "pytest-cov>=6.2.0",
    "ruff>=0.12,<0.13",
    "pyrefly>=1.0.0",
    # The offline test tier always uses in-memory async SQLite, regardless of
    # the runtime database, so aiosqlite is a dev dependency even for Postgres.
    "aiosqlite>=0.20.0",
    "qrcode[pil]>=8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
# Disable rules that are too noisy for this scaffold.
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.lint.isort]
known-first-party = ["margen_api"]

[tool.coverage.run]
branch = true
# SQLAlchemy's async engine drives I/O through greenlet, and the ASGI app runs
# routes in a thread pool. Track both so coverage records branches that resume
# after an awaited database call (e.g. error-handling paths).
concurrency = ["thread", "greenlet"]
omit = ['tests/*', 'migrations/*', 'src/margen_api/asgi.py', 'src/margen_api/main.py', 'src/**/__init__.py']

[tool.coverage.report]
show_missing = true
ignore_errors = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError", "if TYPE_CHECKING:", "if __name__ == .__main__.:"]


[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = "test_*.py"
junit_family = "xunit1"
log_cli = false
log_level = "DEBUG"
asyncio_mode = "auto"
markers = ["integration: requires a real PostgreSQL database (Docker)"]

[tool.pyrefly]
project-includes = ["src", "scripts", "tests", "migrations"]
search-path = [".", "src"]
